Fix weekList delete button overflowing on safari
Seems like the problem might be the font-family. This was manually set to `Segoe UI` (I guess because I copied it from the nav logout button which I might have styled this way previously to match the links in the navbar).  Segoe UI is a microsoft font so probably isn't shipped on MacOS. Removing that declaration fixes the issue and doesn't seem to affect Firefox or Chrome in any way (the logout button neither).

--- a/frontend/src/css/components/Nav.css
+++ b/frontend/src/css/components/Nav.css
@@ -24,7 +24,6 @@ nav button {
     color: #F8F4EF;
     background-color: #382A1E;
     border: none;
-    font-family: 'Segoe UI';
     font-size: 16px;
 }
 
